# rustle-blog

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.sample.toml
derive/: Cargo.toml
derive/src/: err.rs  handler.rs  join.rs  lib.rs
derive_additional/: Cargo.toml
derive_additional/src/: lib.rs
locales/: email.yml  user.yml
locales/en-US/: builtin_permission.ftl  email.ftl  user.ftl
locales/zh-CN/: email.ftl  user.ftl
src/: main.rs
src/communication/: mail.rs  mod.rs
src/core/: config.rs
src/db/: article.rs  fs.rs  mod.rs  rbac.rs  user.html  user.rs  verification.html  verification.rs
src/fs/: embed.rs
src/internal/: arg.rs  config.rs  log.rs  mod.rs
src/middlewares/: auth.rs  log.rs  mod.rs  request_id.rs  session.rs
src/providers/: auth.rs  mod.rs
src/providers/article/: api.rs
src/providers/auth/: api.rs  service.rs
src/providers/renderer/: console.rs
src/providers/user/: api.rs  service.rs
src/routes/: auth.rs  mod.rs  user.rs
src/types/: arg.rs  config.rs  err.rs  join.rs  mod.rs  service.rs
src/utils/: error_handling.rs  hmac.rs  log.rs  mod.rs  paseto.rs  password_salt.rs  request.rs  response.rs  sniffer.rs  stream.rs  validate.rs
templates/email/: tolink.hbs  tolink.html  verify.hbs  verify.html
