[package]
name = "rustle-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.58.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13.1"
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing-core = "0.1.32"
lazy_static = "1.4.0"
argon2 = "0.5.2"
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
log = { version = "0.4.20" }