[package]
name = "rustle-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.63.1", features = ["session"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13.1"
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.50"
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing-core = "0.1.32"
lazy_static = "1.4.0"
argon2 = { version = "0.5.2", features = ["std"] }
log = { version = "0.4.20" }
rustle-derive = { path = "./derive" }
# rustle-derive-additional = { path = "./derive_additional" }
os_info = { version = "3", default-features = false }
toml = "0.8.8"
rand = "0.8.5"
lettre = { version = "0.11", features = ["boring-tls", "smtp-transport", "builder"], default-features = false }
rust-embed="8.0.0"
handlebars = { version = "4.5.0", features = ["rust-embed"] }
fluent-templates = { version = "*", features = ["handlebars"] }
once_cell = "1.8.0"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.21.5"
sync_cow = "0.1.1"
dashmap = "5.5.3"
sqlx = { version = "0.7.3", features = ["mysql","chrono","runtime-tokio"] }
uuid = { version = "1.7.0", features = ["v4"] }
# evlru = "0.1.1"
lru = "0.12.1"
chrono = "0.4.31"
[build-dependencies]
chrono = "0.4.31"
