[package]
name = "rustle-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.64"
anyhow = { version = "1.0.75", features = ["backtrace"] }
rustle-derive = { path = "./derive" }
os_info = { version = "3", default-features = false }
toml = "0.8.8"
rand = "0.8.5"
lettre = { version = "0.11", features = ["boring-tls", "smtp-transport", "builder"], default-features = false }
rust-embed="8.0.0"
handlebars = { version = "4.5.0", features = ["rust-embed"] }
fluent-templates = { version = "*", features = ["handlebars"] }
once_cell = "1.8.0"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.21.5"
sync_cow = "0.1.1"
dashmap = "5.5.3"
sqlx = { version = "0.7.3", features = ["mysql","chrono","runtime-tokio"] }
uuid = { version = "1.7.0", features = ["v4"] }
lru = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
ammonia = "3"
clap = { version = "4.4.18", features = ["derive"] }
serde-inline-default = "0.2.0"
pasetors = "0.6.8"
argon2 = "0.5.3"
tokio-util = { version = "0.7.10", features = ["io-util"] }
futures-util = "0.3.30"
ntex = { version = "1.1.0", features = [ "tokio" ]}
trie-rs = "0.2.0"
pin-project = "1.1.4"
strum_macros = "0.26.1"

[build-dependencies]
chrono = "0.4.31"

[workspace]
members = [".","derive"]
