[package]
name = "rustle-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.39", features = ["full","printing"]}
quote = "1.0"
proc-macro2 = "1.0.69"
convert_case = "0.6.0"
serde = "1.0.190"
salvo = "0.65.1"
ntex = { version = "1.1.0", features = ["tokio"] }
[lib]
proc-macro = true